Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106092

Binding to CaptureSession.imageCapture fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.2.6, 6.5.0 Beta1
    • 6.4.0 Beta3
    • Multimedia
    • None
    • Windows
    • b45858f099 (qt/qtmultimedia/dev) b45858f099 (qt/tqtc-qtmultimedia/dev) ba58c54180 (qt/qtmultimedia/6.3) 317012aa08 (qt/tqtc-qtmultimedia/6.2) a2ba898430 (qt/qtmultimedia/6.4) ba58c54180 (qt/tqtc-qtmultimedia/6.3) a2ba898430 (qt/tqtc-qtmultimedia/6.4)

    Description

      QML Camera Example (declarative-camera) produces the following error:

      qrc:/declarative-camera.qml:119:23: Cannot assign to property of unknown type "QImageCapture*".

      Works on Qt 6.3.0

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            anrocha André De La Rocha (Inactive)
            kahautam Kari Hautamäki
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes