Register QImageCapture as an anonymous QML type

Although ImageCapture is registered as a QML type associated with
QQuickImageCapture, its base class remained unknown to QML, thus
an assignment to the imageCapture property in CaptureSession was
causing a run time failure.

Fixes: QTBUG-106092
Change-Id: If0cbbad8cf2b5c4261735a873bac9c1a42fe3333
Reviewed-by: Piotr Srebrny <piotr.srebrny@qt.io>
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit b45858f099f710bec746819e67c730a3efc644cb)